<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.solutis.ewerton.booksonthetable.ui.activity.internal.view_book.ViewBookViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.internal.view_book.ViewBookFragment">

        <include
            android:id="@+id/title"
            layout="@layout/top_banner_book_layout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/book_info_card"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="16dp"
                    app:layout_constraintBottom_toTopOf="@id/change_status_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:cardCornerRadius="12dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="22dp">

                        <TextView
                            android:id="@+id/book_author_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/main"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:text="@string/book_author_label" />

                        <TextView
                            android:id="@+id/book_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="@{viewModel.book.author}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/book_author_label"
                            tools:text="Fulano da Silva" />

                        <TextView
                            android:id="@+id/book_gender_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/main"
                            android:textSize="18sp"
                            android:layout_marginTop="12dp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            card_view:layout_constraintTop_toBottomOf="@id/book_author"
                            android:text="@string/book_gender_label" />

                        <TextView
                            android:id="@+id/book_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="@{viewModel.book.gender}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/book_gender_label"
                            tools:text="Romance policial" />

                        <TextView
                            android:id="@+id/book_status_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/main"
                            android:textSize="18sp"
                            android:layout_marginTop="12dp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/book_gender"
                            android:text="@string/book_status_label" />

                        <TextView
                            android:id="@+id/book_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="@{viewModel.book.status.statusName}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/book_status_label"
                            tools:text="Lendo" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/change_status_button"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="16dp"
                    app:shapeAppearanceOverlay="@style/RoundedInputLayout"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="@id/book_info_card"
                    card_view:layout_constraintStart_toStartOf="@id/book_info_card"
                    android:text="@{String.format(@string/mark_as,viewModel.book.getNextStatusName()).toUpperCase()}"
                    tools:text="marcar como lido" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
